tutorial_ai/02_openshift_ai/level_2/M1_rag/4_end_to_end_rag/manifests/rag-app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rag-app
  labels:
    app: rag-app
    tutorial-level: "2"
    tutorial-module: "M1"
spec:
  selector:
    app: rag-app
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
