tutorial_ai/02_openshift_ai/level_2/M1_rag/4_end_to_end_rag/manifests/rag-app-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: rag-app
  labels:
    app: rag-app
    tutorial-level: "2"
    tutorial-module: "M1"
spec:
  to:
    kind: Service
    name: rag-app
  port:
    targetPort: 8080
  tls:
    termination: edge
